@@ -188,7 +188,7 @@ make DESTDIR="$RPM_BUILD_ROOT" MODULEDIR="/lib/modules/%{abi}-debug-ABI/oracleas
 %endif
 
 
-cd ../libosm
+cd ../libasm
 make
 cd ../tools
 make
@@ -214,7 +214,7 @@ else
     BPL=32
 fi
 mkdir -p ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1
-cp libosm/libosm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
+cp libasm/libasm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
 
 cd tools
 make DESTDIR="$RPM_BUILD_ROOT" install
