@@ -199,7 +199,7 @@ make DESTDIR="$RPM_BUILD_ROOT" MODULEDIR="/lib/modules/%{kver}-debug-ABI/oraclea
 %endif
 
 
-cd ../libosm
+cd ../libasm
 make
 cd ../tools
 make
@@ -259,7 +259,7 @@ else
     BPL=32
 fi
 mkdir -p ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1
-cp libosm/libosm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
+cp libasm/libasm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
 
 cd tools
 make DESTDIR="$RPM_BUILD_ROOT" install
