@@ -270,7 +270,7 @@ else
     BPL=32
 fi
 mkdir -p ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1
-cp libosm/libosm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
+cp libasm/libasm.so ${RPM_BUILD_ROOT}/opt/extapi/${BPL}/asm/orcl/1/
 
 cd tools
 make DESTDIR="$RPM_BUILD_ROOT" install
