@@ -1,6 +1,10 @@
 
 2003-12-17	Joel Becker <joel.becker@oracle.com>
 
+	* vendor/*/*.spec.in: OSM -> ASM.
+
+2003-12-17	Joel Becker <joel.becker@oracle.com>
+
 	* test/asm{bad,profile,test,test-multi}.c: OSM -> ASM.
 	* test/sizes.c: OSM -> ASM.
 
